--- a/project/templates/main/pistason.html
+++ b/project/templates/main/pistason.html
@@ -31,7 +31,7 @@
                     {{ pista.fecha_grab }}
                 </h3>
             {% endif %}
-            {% if pista.lugar_interp is not none %}
+            {% if pista.lugar_id is not none %}
                 <h3 class="indented">
                     {% if pista.ciudad != "Desconocida" %}
                         {{ pista.ciudad }},
