--- a/project/templates/includes/_navbar.html
+++ b/project/templates/includes/_navbar.html
@@ -7,11 +7,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand">Poética Sonora</a>
+          <a class="navbar-brand" href="http://poeticasonora.mx">Poética Sonora</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/">Página Principal</a></li>
+            <li><a href="/searchhome">Página Principal</a></li>
             <li><a href="http://poeticasonora.mx/Proyecto">Sobre el proyecto</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
