--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -98,7 +98,8 @@
         </div>
 
         <!-- scripts -->
-        <script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+                    crossorigin="anonymous"></script>
         <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src ="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
         <script src="{{ url_for('static', filename='js/form-toggle.js') }}"></script>
