--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -109,6 +109,7 @@
         <script src="{{ url_for('static', filename='js/ajax-change-state.js') }}"></script>
         <script src="{{ url_for('static', filename='js/ajax-change-permission.js') }}"></script>
         <script src="{{ url_for('static', filename='js/data-tables.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/progress-bar.js') }}"></script>
         {% block js %}{% endblock %}
     </body>
 </html>
