--- a/project/templates/poner/part.html
+++ b/project/templates/poner/part.html
@@ -22,7 +22,7 @@
                 {% if form.user_type.errors %}
                     <ul class="errors">
                     {% for error in form.user_type.errors %}
-                        <li>{{ error }}</li>
+                        <li class="li-error">{{ error }}</li>
                     {% endfor %}
                     </ul>
                 {% endif %}
