--- a/project/templates/user/activate.html
+++ b/project/templates/user/activate.html
@@ -1,4 +1,4 @@
-<p>Welcome! Thanks for signing up. Please follow this link to activate your account:</p>
+<p>¡Bienvenido! Gracias por registrarte. Siga este enlace para activar su cuenta::</p>
 <p><a href="{{ confirm_url }}">{{ confirm_url }}</a></p>
 <br>
-<p>Cheers!</p>
+<p>¡Aclamaciones!</p>
