--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -63,11 +63,35 @@
         </div>
     </div>
 
+    <div class="modal fade" id="progress-modal" role="dialog">
+        <div class="vertical-alignment-helper">
+            <div class="modal-dialog vertical-alignment-center">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header text-center">
+                        <h4 class="modal-title">Por favor espera</h4>
+                    </div>
+                    <div class="modal-body text-center">
+                        <div class="progress">
+                            <div id="progressBar" class="progress-bar" role="progressbar"
+                            aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                                0%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
         {% include 'includes/_navbar.html' %}
 
         <div class="container center-block" style="width: 80%;">
 
             <!-- messages -->
+            <div class="row">
+            <div class="col-md-12" id="flash-message-div"></div>
+            </div>
             {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               <div class="row">
