--- a/project/templates/poner/serie.html
+++ b/project/templates/poner/serie.html
@@ -22,6 +22,9 @@
             <div class="form-group">
                 {{render_field(form.giro, class ="form-control")}}
             </div>
+            <div class="form-group">
+                {{render_field(form.coment_serie, class ="form-control")}}
+            </div>
             <br>
              <div>
                 <button class="btn btn-success" type="submit">Enviar</button>
