--- a/project/templates/user/admin.html
+++ b/project/templates/user/admin.html
@@ -38,7 +38,7 @@
                 </div>
                 <div id="usuario-collapse" class="collapse in">
                     <div class="card-block">
-                        <table class="table table-striped">
+                        <table class="table table-striped mod-tables">
                         <thead>
                             <tr>
                                 <th>Nom usuario</th>
